# CppExampleDockerization

./: .gitmodules  Dockerfile  README.md  docker-compose.yml
app/: CMakeLists.txt
app/src/: main.cpp
